<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49627A"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#49627A"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/previous"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second2" />

    <Button
        android:id="@+id/button_second2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#49627A"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/CreateFrag2"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textview_first2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4571A6"
        android:fontFamily="sans-serif-black"
        android:text="@string/hello_first_fragment"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:background="#F73B688C"
        android:fontFamily="@font/aclonica"
        android:text="@string/Race_choice"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="205dp"
        android:layout_height="0dp"
        android:background="#F73B688C"
        android:fontFamily="@font/aclonica"
        android:text="@string/Classe_choice"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:background="#49627A"
        android:fontFamily="@font/aclonica"
        android:text="@string/ButtonHuman"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:background="#49627A"
        android:fontFamily="@font/aclonica"
        android:text="@string/ButtonOrc"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:background="#49627A"
        android:fontFamily="@font/aclonica"
        android:text="@string/ButtonElv"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:background="#49627A"
        android:fontFamily="@font/aclonica"
        android:text="@string/ButtonWarrior"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:background="#49627A"
        android:fontFamily="@font/aclonica"
        android:text="@string/ButtonMagician"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:background="#49627A"
        android:fontFamily="@font/aclonica"
        android:text="@string/ButtonAssassin"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="408dp"
        android:layout_height="367dp"
        android:background="@drawable/human_warrior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>